--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
       # uses: schemathesis/action@64470e113c88539e98bf7bb5a1541154e3ec48bf
       - uses: schemathesis/action@v1.0.2
         with:
-          schema: 'https://app.swaggerhub.com/apis-docs/FOSSA1/App/0.3.7#/openapi.json'
+          schema: 'https://petstore3.swagger.io/openapi.json'
           token: ${{ secrets.SCHEMATHESIS_TOKEN }}
