--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,4 @@ jobs:
         with:
           schema: 'https://example.schemathesis.io/openapi.json'
           token: ${{ secrets.SCHEMATHESIS_TOKEN }}
+          max-examples: 2
