--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
       # uses: schemathesis/action@64470e113c88539e98bf7bb5a1541154e3ec48bf
       - uses: schemathesis/action@v1.0.2
         with:
-          schema: 'https://example.schemathesis.io/openapi.json'
+          schema: 'https://petstore.swagger.io/v2/swagger.json'
           token: ${{ secrets.SCHEMATHESIS_TOKEN }}
           max-examples: 2
