--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Schemathesis
+name: Schemathesis_DEV
 
 # Controls when the workflow will run
 on:
@@ -20,25 +20,6 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: dev
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # You may pin to the exact commit or the version.
-      # uses: schemathesis/action@64470e113c88539e98bf7bb5a1541154e3ec48bf
-      - uses: schemathesis/action@v1.0.2
-        with:
-          schema: 'https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json'
-          token: ${{ secrets.SCHEMATHESIS_TOKEN }}
-          max-examples: 100
-          
-           # This workflow contains a single job called "build"
-  QA:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    environment: QA
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
