--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: check out repo content
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
       - name: setup python
         uses: actions/setup-python@v2
