--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Schemathesis_DEV
+name: Schemathesis_local_install
 
 # Controls when the workflow will run
 on:
