--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains deployment jobs"
-  Development:
+  Local-Install:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: dev
@@ -31,8 +31,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8 # install the python needed
-          run: |
-            python -m pip install --upgrade pip
-            pip install schemathesis
-            schemathesis runhttps://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json 
+          
+      - name: Schemathesis
+        run: |
+          python -m pip install --upgrade pip
+          pip install schemathesis
+          schemathesis run https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json 
       
