--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -36,5 +36,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install schemathesis
-          schemathesis run --hypothesis-max-examples=5 https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json
+          schemathesis run --report --hypothesis-max-examples=5 https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json
       
