--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install schemathesis
-          schemathesis run --hypothesis-max-examples=5 --report xx.txt https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json
+          schemathesis run --hypothesis-max-examples=5 --debug-output-file xx.txt https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json
           cat xx.txt
       
