--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -34,7 +34,7 @@ jobs:
           
       - name: Schemathesis
         run: |
-          python -m pip install --upgrade pip
+          #python -m pip install --upgrade pip
           pip install schemathesis
           schemathesis run --hypothesis-max-examples=5 --debug-output-file xx.txt https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.1/swagger.json
           cat xx.txt
