--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -34,10 +34,13 @@ jobs:
           
       - name: Schemathesis
         run: |
-          continue-on-error true
           python -m pip install --upgrade pip
           pip install httpx
           pip install schemathesis
           schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=xx.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json
+          
+      - name: Report_Output
+        if: always()
+        run: |
           cat xx.xml
       
