--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -37,10 +37,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install httpx
           pip install schemathesis
-          schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=xx.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json
+          schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=/junit/results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json
           
-      - name: Report_Output
+      - name: Report Output
         if: always()
         run: |
-          cat xx.xml
+          cat /junit/results.xml
+          
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: alway()
+        with:
+         report_paths: '**/junit/results.xml'
       
