--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -46,7 +46,7 @@ jobs:
           
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
-        if: alway()
+        if: always()
         with:
-         report_paths: '**/junit/results.xml'
+         report_paths: '/junit/results.xml'
       
