--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -37,16 +37,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install httpx
           pip install schemathesis
-          schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=/junit/results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json
+          schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.0/swagger.json
           
       - name: Report Output
         if: always()
         run: |
-          cat /junit/results.xml
+          cat results.xml
           
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always()
         with:
-         report_paths: '/junit/results.xml'
+         report_paths: 'results.xml'
       
