--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -44,9 +44,18 @@ jobs:
         run: |
           cat results.xml
           
+# one type of test output          
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always()
         with:
          report_paths: 'results.xml'
       
+# second junit test output
+      - name: Publish Test Report2
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Schemathesis Tests
+          path: results.xml
+          reporter: jest-Junit
