--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           cat results.xml
           
-# one type of test output          
+# Schemathesis results test output         
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always()
