--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -46,10 +46,10 @@ jobs:
           
 # Schemathesis results test output         
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
+        uses: mikepenz/action-junit-report@v3.5.0
         if: always()
         with:
          report_paths: 'results.xml'
          check_name: 'Schemathesis Test Report'
-         include_passed: true
-         require_tests: true
+         include_passed: 'true'
+         require_tests: 'true'
