--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -38,8 +38,14 @@ jobs:
           pip install httpx
           pip install schemathesis
           schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.2/swagger.json
-          
-# Schemathesis results test output         
+
+      - name: Attach report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Schemathesis.xml
+          path: results.xml
+
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3.5.0
         if: always()
