--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -39,20 +39,21 @@ jobs:
           pip install schemathesis
           # contains max tests
           #schemathesis run --checks all --hypothesis-max-examples=5 --junit-xml=results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.2/swagger.json
-          schemathesis run --checks all --junit-xml=results.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.2/swagger.json
+          schemathesis run --checks all --junit-xml=runOutput.xml https://api.swaggerhub.com/apis/PEBELTON_1/trial/1.0.2/swagger.json
+          readlink -f runOutput.xml
 
       - name: Attach report
         uses: actions/upload-artifact@v3
         if: always()
         with:
           name: Schemathesis.xml
-          path: results.xml
+          path: runOutput.xml
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3.5.0
         if: always()
         with:
-         report_paths: 'results.xml'
+         report_paths: 'runOutput.xml'
          check_name: 'Schemathesis Test Report'
          include_passed: 'true'
          require_tests: 'true'
