--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -67,8 +67,8 @@ jobs:
       - name: Extract Summary
         if: always()
         run: |
-          sudo chmod 701 ./.github/scripts/extractSummary.sh
-          ./.github/scripts/extractSummary.sh
+          sudo chmod 701 .github/scripts/extractSummary.sh
+          .github/scripts/extractSummary.sh
         shell: bash
         
       - name: Attach report
