--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ~/.cache/pip
+          key: ${{ hashFiles('setup.py') }}-${{ hashFiles('dev-requirements.txt') }}
 
       - name: Schemathesis
         run: |
