--- a/.github/workflows/localSchem.yml
+++ b/.github/workflows/localSchem.yml
@@ -65,6 +65,7 @@ jobs:
         if: always()
         run: |
           ls -a
+          rm summary.txt
           startLineNum="$(grep -n "== SUMMARY ==" runOutput.txt | head -n 1 | cut -d: -f1)"
           endLineNum="$(grep -n "JUnit XML file:" runOutput.txt | head -n 1 | cut -d: -f1)"
           echo "$startLineNum"
